frontend/test/should_pass/basic_025.grg
test t {
	pattern {
		if { true; }
	}
}

