frontend/test/should_fail/independent_002.grg
test negTest
{
    independent {
        if { x == y; }
    }
}
